<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Call and SMS stats</string>
    <string name="incoming_calls">Incoming calls</string>
    <string name="outgoing_calls">Outgoing calls</string>
    <string name="missed_calls">Missed calls</string>
    <string name="rejected_calls">Rejected calls</string>
    <string name="incoming_sms">Incoming SMS</string>
    <string name="outgoing_sms">Outgoing SMS</string>
    <string name="incoming_mms">Incoming MMS/RCS</string>
    <string name="outgoing_mms">Outgoing MMS/RCS</string>
    <string name="permissions_required">Statistics can\'t be shown without permission to read calls and SMS.</string>
    <string name="no_data">No data to display.</string>

    <string name="period_day">Day</string>
    <string name="period_week">Week</string>
    <string name="period_month">Month</string>
    <string name="period_year">Year</string>

    <string name="mobile_data">Mobile data</string>
    <string name="data_empty">No mobile data this period.</string>
    <string name="data_needs_usage_access">Tap to enable Usage access for mobile data.</string>
    <string name="data_removed_apps">Removed apps</string>
    <string name="data_tethering">Tethering</string>
    <string name="data_android_os">Android OS</string>
    <string name="usage_access_title">Mobile data</string>
    <string name="usage_access_message">To show mobile data usage, enable “Usage access” for this app in Settings. Calls and SMS work without it.</string>
    <string name="usage_access_enable">Open settings</string>
    <string name="action_later">Later</string>

    <!-- Buňka hovorů: %1$s = celkový čas (HH:MM:SS), %2$d = počet hovorů -->
    <string name="call_value_format">%1$s (%2$d)</string>

    <string name="detail_incoming_call">Incoming call</string>
    <string name="detail_outgoing_call">Outgoing call</string>
    <string name="detail_missed_call">Missed call</string>
    <string name="detail_rejected_call">Rejected call</string>
    <string name="detail_incoming_sms">Incoming SMS</string>
    <string name="detail_outgoing_sms">Outgoing SMS</string>
    <string name="detail_incoming_mms">Incoming MMS/RCS</string>
    <string name="detail_outgoing_mms">Outgoing MMS/RCS</string>
    <string name="detail_unknown_number">Unknown number</string>
    <string name="detail_empty">No records this period.</string>
    <string name="filter_empty">No records of this type.</string>

    <string name="filter_all">All</string>
    <string name="filter_incoming_calls">Incoming calls</string>
    <string name="filter_outgoing_calls">Outgoing calls</string>
    <string name="filter_missed">Missed</string>
    <string name="filter_rejected">Rejected</string>
    <string name="filter_incoming_sms">Incoming SMS</string>
    <string name="filter_outgoing_sms">Outgoing SMS</string>
    <string name="filter_incoming_mms">Incoming MMS/RCS</string>
    <string name="filter_outgoing_mms">Outgoing MMS/RCS</string>

    <string name="sim_all">All</string>
    <string name="data_no_per_sim">Mobile data can\'t be split per SIM.</string>

    <string name="action_export">Export</string>
    <string name="export_choose_format">Export format</string>
    <string name="export_share_title">Export data</string>
    <string name="export_in_progress">Preparing export…</string>
    <string name="export_failed">Export failed.</string>

    <string name="action_info">Info</string>
    <string name="info_version">Version %1$s</string>
    <string name="info_author">Author: Jiří Nečas</string>
    <string name="info_github_url" translatable="false">https://github.com/necik/CallAndSMSStats</string>
</resources>
